--- a/Forma/index.html
+++ b/Forma/index.html
@@ -1,1 +1,46 @@
-index.html
+<DOCTYPE html>
+<html>
+	<head>
+		<title>Formos</title>
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<h1>Forma</h1>
+		<form>
+			<fieldset>
+				<input type="text" placeholder="Vardas" required>
+			</fieldset>
+			<fieldset>
+				<input type="email" placeholder="el. pastas">
+			</fieldset>
+			<fieldset>
+				<label>Gimimo data</label>
+				<input type="date">
+			</fieldset>
+			<fieldset>
+				<label>Akiu spalva</label>
+				<input type="color" required>
+			</fieldset>
+			<fieldset>
+				<select>
+					<option selected disabled>--Pasirinkite tema--</option>
+					<option>Bendri klausimai</option>
+					<option>GIT</option>
+					<option>HTML</option>
+					<option>CSS</option>
+					<option>JS</option>
+				</select>
+			</fieldset>
+			<fieldset>
+				<textarea placeholder="Zinute"></textarea>
+			</fieldset>
+			<fieldset>
+				<label>Su viskuo sutinku</label>
+				<input type="checkbox">
+			</fieldset>
+			<fieldset>
+				<button type="submit">Siusti</button>
+			</fieldset>
+		</form>
+	</body>
+</html>
