--- a/Forma/forma.html
+++ b/Forma/forma.html
@@ -14,11 +14,11 @@
 			</fieldset>
 			<fieldset>
 				<label>Slaptazodis:*</label>
-				<input type="email" required>
+				<input type="password" required>
 			</fieldset>
 			<fieldset>
 				<label>Patvirtinti slaptazodi:*</label>
-				<input type="email" required>
+				<input type="password" required>
 			</fieldset>
 			<fieldset>
 				<label>Sutinku su taisyklemis</label>
